--- a/DvachBrowser3/project.json
+++ b/DvachBrowser3/project.json
@@ -5,7 +5,8 @@
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Newtonsoft.Json": "7.0.1",
-    "Template10": "1.0.8"
+    "Template10": "1.0.8",
+    "XamlAnimatedGif": "1.0.7"
   },
   "frameworks": {
     "uap10.0": {}
