--- a/DvachBrowser3/DvachBrowser3.csproj
+++ b/DvachBrowser3/DvachBrowser3.csproj
@@ -122,10 +122,12 @@
     <Compile Include="Core\CollectionHelper.cs" />
     <Compile Include="Core\IWeakEventCallback.cs" />
     <Compile Include="Core\IWeakEventChannel.cs" />
+    <Compile Include="Core\ScrollViewHelper.cs" />
     <Compile Include="Core\NavigationHelper.cs" />
     <Compile Include="Core\SizeChangeDelayHelper.cs" />
     <Compile Include="Core\SizeHelper.cs" />
     <Compile Include="Core\StatusBarHelper.cs" />
+    <Compile Include="Core\VisualTreeHelperExtensions.cs" />
     <Compile Include="Core\WeakEventArgs.cs" />
     <Compile Include="Core\WeakEventCallback.cs" />
     <Compile Include="Core\WeakEventChannel.cs" />
@@ -136,6 +138,7 @@
     <Compile Include="Logic\IBoardPageLoaderResult.cs" />
     <Compile Include="Navigation\IBoardLinkPage.cs" />
     <Compile Include="Navigation\Implementation\PageNavigationService.cs" />
+    <Compile Include="Navigation\INavigationDataPage.cs" />
     <Compile Include="Navigation\INavigationRolePage.cs" />
     <Compile Include="Navigation\IPageNavigationService.cs" />
     <Compile Include="Navigation\NavigationRole.cs" />
@@ -151,6 +154,7 @@
     <Compile Include="PageServices\PageServiceCollection.cs" />
     <Compile Include="PageServices\PageServices.cs" />
     <Compile Include="PageServices\ShellAppBarPageService.cs" />
+    <Compile Include="PageServices\StoreNavigationDataPageService.cs" />
     <Compile Include="PageServices\ViewModelLifetimePageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Banners\BannerLoadedEventArgs.cs" />
