Сетевая логика загрузки каталога

--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Logic\PostingMode.cs" />
     <Compile Include="Logic\ThreadTreeProcessService.cs" />
     <Compile Include="Logic\UpdateBoardPageMode.cs" />
+    <Compile Include="Logic\UpdateCatalogMode.cs" />
     <Compile Include="Logic\UpdateThreadMode.cs" />
     <Compile Include="Models\Board\BoardReference.cs" />
     <Compile Include="Models\Board\BoardReferenceExtension.cs" />
