Исправления работы с ESENT

--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -59,23 +59,28 @@
     <Compile Include="Common\DateService.cs" />
     <Compile Include="Common\DebugHelper.cs" />
     <Compile Include="Common\Empty.cs" />
-    <Compile Include="Common\IConcurrenctyDispatcher.cs" />
+    <Compile Include="Threading\AsyncConcurrencySemaphore.cs" />
+    <Compile Include="Threading\AsyncLock.cs" />
+    <Compile Include="Threading\IAsyncLock.cs" />
+    <Compile Include="Threading\IConcurrenctyDispatcher.cs" />
     <Compile Include="Common\IConfiguration.cs" />
     <Compile Include="Common\IDateService.cs" />
     <Compile Include="Common\IJsonService.cs" />
     <Compile Include="Common\IRegexCacheService.cs" />
     <Compile Include="Common\ISerializerCacheService.cs" />
+    <Compile Include="Threading\IThreadExecutionContext.cs" />
     <Compile Include="Common\ITreeWalkContextBreak.cs" />
     <Compile Include="Common\JsonService.cs" />
-    <Compile Include="Common\MaxConcurrencyAccessManager.cs" />
+    <Compile Include="Threading\MaxConcurrencyAccessManager.cs" />
     <Compile Include="Common\NetworkProfile.cs" />
     <Compile Include="Common\RegexCacheService.cs" />
     <Compile Include="Common\SemiBufferedStream.cs" />
-    <Compile Include="Common\SerializedAccessManager.cs" />
+    <Compile Include="Threading\SerializedAccessManager.cs" />
     <Compile Include="Common\SerializerCacheService.cs" />
     <Compile Include="Common\ServiceDependencyInfoAttribute.cs" />
     <Compile Include="Common\StreamHelpers.cs" />
-    <Compile Include="Common\TimePeriodDataAggregator.cs" />
+    <Compile Include="Threading\ThreadExecutionContext.cs" />
+    <Compile Include="Threading\TimePeriodDataAggregator.cs" />
     <Compile Include="Common\TreeApplyFunc.cs" />
     <Compile Include="Common\TreeWalkContext.cs" />
     <Compile Include="Common\UniqueIdHelper.cs" />
